--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,48 @@
-fastapi
-uvicorn
-requests
-geopandas
-shapely
-fiona
-jinja2
-aiofiles
+appdirs==1.4.4
+atomicwrites==1.4.0
+backports.weakref==1.0.post1
+clyent==1.2.2
+colorama==0.4.6
+conda-repo-cli==1.0.75
+conda-verify==3.4.2
+contourpy==1.3.1
+cycler==0.12.1
+deepl==1.21.0
+et-xmlfile==1.1.0
+fonttools==4.55.5
+inflection==0.5.1
+jiter==0.9.0
+joblib==1.4.2
+jsonpointer==2.1
+kiwisolver==1.4.8
+matplotlib==3.10.0
+mkl-service==2.4.0
+munkres==1.1.4
+openai==1.70.0
+openpyxl==3.1.5
+packaging==24.2
+pandas==2.2.3
+patsy==0.5.3
+ply==3.11
+protobuf==3.20.3
+pyasn1-modules==0.2.8
+pycurl==7.45.2
+PyDispatcher==2.0.5
+pyls-spyder==0.4.0
+pyparsing==3.2.1
+PyQt5==5.15.10
+PyQtWebEngine==5.15.6
+python-dateutil==2.9.0.post0
+python-lsp-jsonrpc==1.0.0
+pytz==2024.2
+pywin32==305.1
+scikit-learn==1.6.1
+scipy==1.15.1
+six==1.17.0
+threadpoolctl==3.5.0
+tiktoken==0.9.0
+tqdm==4.67.1
+typing_extensions==4.13.0
+tzdata==2025.1
+webencodings==0.5.1
+zstandard==0.19.0
